# pdb_interaction_tools

./: .gitignore  README.md  docs.ipynb  main.py  pyproject.toml  requirements.txt
src/Align/: rmsd.py
src/Antibody/: scoring.py
src/Distance/: calculate.py
src/Schema/: __init__.py  interaction_schema.py  structure_schema.py  sturcture_schema.py
src/utils/: amino_acid.py  load_pdb.py  visualize.py
tests/: test_color.py  test_hello.py
tests/distance_tests/: find_interactions_test.py
tests/file_loading_tests/: structure_test.py
tests/scoring_tests/: test_scoring.py
tests/shema_tests/: test_interactions.py
tools/: AminoAcids.py  ViewTools.py  __init__.py  distance.py
tools/antibody/: residue_frequency.py  residue_pair_frequency.npy  scoring.py
